--- a/PersonalBlog/app/src/main/AndroidManifest.xml
+++ b/PersonalBlog/app/src/main/AndroidManifest.xml
@@ -18,6 +18,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <uses-permission android:name="android.permission.CAMERA"></uses-permission>
+        <uses-feature android:name="android.hardware.camera" />
+        <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+        <uses-permission android:name="android.permission.RECORD_AUDIO" />
+        <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     </application>
 
 </manifest>
