--- a/PersonalBlog/app/src/main/AndroidManifest.xml
+++ b/PersonalBlog/app/src/main/AndroidManifest.xml
@@ -8,6 +8,16 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <uses-permission android:name="android.permission.CAMERA"></uses-permission>
+        <uses-feature android:name="android.hardware.camera" />
+        <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+        <uses-permission android:name="android.permission.RECORD_AUDIO" />k
+        <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+        <uses-permission android:name="android.permission.INTERNET" />
+
+
+
         <activity
             android:name=".HomePageActivity"
             android:label="@string/app_name"
@@ -20,11 +30,8 @@
         </activity>
 
 
-        <uses-permission android:name="android.permission.CAMERA"></uses-permission>
-        <uses-feature android:name="android.hardware.camera" />
-        <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-        <uses-permission android:name="android.permission.RECORD_AUDIO" />
-        <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+
 
 
         <activity
