added code to enlarge video

--- a/PersonalBlog/app/src/main/AndroidManifest.xml
+++ b/PersonalBlog/app/src/main/AndroidManifest.xml
@@ -76,7 +76,8 @@
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
         </activity>
-        <activity android:name=".photoFullScreenActivity"></activity>
+        <activity android:name=".PhotoFullScreenActivity" />
+        <activity android:name=".VideoFullScreenActivity"></activity>
     </application>
 
 </manifest>
